Linted files and added logger